# ttt_theory

./: README.md  pyproject.toml
sae/: README.md  config.json  extract_clip_embd.py  sae_topk.py
scaling/: README.md
scaling/data/imagenet/: README.md  data_generator.py  test_val_split.py
scaling/data/mnist/: README.md  data_generator.py
scaling/imagenet/a_global_linear/: eval_reference.py  train_global_linear_model.py
scaling/imagenet/b_ttt_linear_head/: ttt_linear_head.py
scaling/imagenet/c_mlp_heads/: eval_mlp_heads.py  train_global_mlp_head.py
scaling/imagenet/d_ttt_mlp_heads/: ttt_mlp_head.py
scaling/imagenet/e_majority/: majority_vote_linear.py  majority_vote_mlp.py
scaling/imagenet/f_scale_dataset/: eval_scale_dataset.py
scaling/imagenet/g_ttt_global_eval/: ttt_global_eval.py
scaling/imagenet/parameters/: models_opt_params.json  param_helper.py  reference_model.yaml
scaling/log_book/: read_and_write.py
scaling/mnist/a_global_classifier/: eval_reference.py  generate_embeddings.py  train_global_model.py
scaling/mnist/b_linear_head/: eval_mnist_linear_head.py  train_mnist_linear_head.py
scaling/mnist/c_ttt_linear_head/: ttt_linear.py
scaling/mnist/d_scale_model/: eval_mnist_cnn.py  train_mnist_scaled_models.py
scaling/mnist/e_ttt_scaled_cnn/: mnist_lft_cnn.py
scaling/models/: cnn.py  evaluation.py  imagenet.py  mnist.py  torch_linear_classifier.py  torch_mlp_classifier.py
scaling/utils/: confidence_interval.py  data_loader.py  data_loader_imagenet.py  data_loader_mnist.py  directory.py  faiss_knn.py  scale_dataset.py
(+34 files in other folders)
